--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.0.0",
     "dompurify": "^3.0.5",
     "eslint-config-next": "^14.0.4",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.268.0",
     "next": "^14.0.4",
     "next-seo": "^6.1.0",
