--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.0",
     "react-icons": "^4.10.1",
+    "react-masonry-css": "^1.0.16",
     "react-scroll": "^1.8.9",
     "storyblok-rich-text-react-renderer": "^2.9.0",
     "tailwind-merge": "^1.14.0",
