update booking funnel

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@formspree/react": "^2.5.1",
     "@headlessui/react": "^1.7.17",
+    "@hookform/resolvers": "^3.10.0",
     "@next/bundle-analyzer": "^14.0.4",
     "@next/third-parties": "^14.0.4",
     "@react-spring/web": "^9.7.4",
@@ -23,6 +24,7 @@
     "clsx": "^2.0.0",
     "dompurify": "^3.0.5",
     "eslint-config-next": "^14.0.4",
+    "framer-motion": "^12.0.6",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.268.0",
     "next": "^14.0.4",
@@ -38,7 +40,8 @@
     "storyblok-rich-text-react-renderer": "^2.9.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
